fix image size on smaller screen

--- a/src/App.css
+++ b/src/App.css
@@ -83,13 +83,18 @@ nav {
   .col-g {
     width: 60%;
   }
+  .react-multi-carousel-list {
+    height: 100%;
+  }
   .react-multi-carousel-item {
     display: flex;
     justify-content: center;
     align-items: center;
   }
   .col-g img {
-    width: calc(92% - 91px);
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
   }
   .col-d {
     background-color: white;
